--- a/config/tool_progression/block_overwrites.cfg
+++ b/config/tool_progression/block_overwrites.cfg
@@ -22,6 +22,9 @@ block {
 ##########################################################################################################
 
 oredict {
+	
+	S:"ore:obsidian"=pickaxe=4
+	
 	S:"ore:oreCoal"=pickaxe=0
 	S:"ore:blockCoal"=pickaxe=0
 	S:"ore:oreIron"=pickaxe=2
