General recipe changes
- Removed cats from zumadus
- Added liquid bismuth to CRA recipes
- misc AE2 changes
- misc rftools changes
- device frame is now easier to make
- added BOP gems to chemical extractor

--- a/config/BiomeTweaker/scripts/mobSpawns.cfg
+++ b/config/BiomeTweaker/scripts/mobSpawns.cfg
@@ -8,3 +8,6 @@ lavender = forBiomes("biomesoplenty:lavender_fields")
 lavender.removeAllSpawns("MONSTER")
 lavender.addSpawn("matteroverdrive.entity.monster.EntityMeleeRougeAndroidMob", "MONSTER", 100, 1, 2)
 lavender.addSpawn("matteroverdrive.entity.monster.EntityRangedRogueAndroidMob", "MONSTER", 100, 1, 2)
+
+tropics = forBiomes("tropicraft:tc_tropics_rainforest_plains", "tropicraft:tc_tropics_rainforest_hills", "tropicraft:tc_tropics_rainforest_mountains", "tropicraft:tc_tropics_rainforest_island_mountains")
+tropics.removeSpawn("net.minecraft.entity.passive.EntityOcelot", "MONSTER")
