--- a/config/BiomeTweaker/scripts/slimePlanet.cfg
+++ b/config/BiomeTweaker/scripts/slimePlanet.cfg
@@ -246,7 +246,7 @@ magma_slime_forest.addDecoration(blood_congealed_patch)
 # ---- ALL ----
 
 Tweaker.setPlacementStage("BIOME_BLOCKS")
-all = forBiomes("biometweaker:blue_slime_forest", "biometweaker:purple_slime_forest", "biometweaker:magma_slime_forest");
+all = forBiomes("biometweaker:blue_slime_forest", "biometweaker:purple_slime_forest", "biometweaker:magma_slime_forest")
 
 all.removeDicTypes("PLAINS")
 all.addDicTypes("NETHER")
