Finished removing redundant tools
- Added ingot-to-block for custom metals
- Added DenyBlocks
- Disabled tconstruct tools in betweenlands

--- a/config/thebetweenlands/config.cfg
+++ b/config/thebetweenlands/config.cfg
@@ -176,6 +176,26 @@ general {
 
     # A list of items that should be weakened in the dimension. Syntax is "modid:itemname:meta", meta can be * for wildcard, if no meta is provided 0 is used
     S:tool_weakness_blacklist <
+        tconstruct:pickaxe:*
+        tconstruct:shovel:*
+        tconstruct:hatchet:*
+        tconstruct:mattock:*
+        tconstruct:kama:*
+        tconstruct:hammer:*
+        tconstruct:excavator:*
+        tconstruct:lumberaxe:*
+        tconstruct:scythe:*
+        tconstruct:broadsword:*
+        tconstruct:longsword:*
+        tconstruct:rapier:*
+        tconstruct:battlesign:*
+        tconstruct:cleaver:*
+        tconstruct:shortbow:*
+        tconstruct:longbow:*
+        tconstruct:arrow:*
+        tconstruct:crossbow:*
+        tconstruct:bolt:*
+        tconstruct:shuriken:*
      >
 
     # A list of items that should not be weakened in the dimension. Syntax is "modid:itemname:meta", meta can be * for wildcard, if no meta is provided 0 is used
@@ -304,13 +324,13 @@ world_and_dimension {
 
     # Min: 0
     # Max: 100
-    I:dimension_brightness=75
+    I:dimension_brightness=50
     I:dimension_id=19
 
     # Higher numbers decrease rate
     # Min: 2
     # Max: 2147483647
-    I:druid_circle_frequency=80
+    I:druid_circle_frequency=2
 
     # If true seasonal events will occur during special periods during a year
     B:enable_seasonal_events=true
