--- a/config/tool_progression/tool_overwrites.cfg
+++ b/config/tool_progression/tool_overwrites.cfg
@@ -7,6 +7,8 @@
 ##########################################################################################################
 
 tool {
+
+	S:"thebetweenlands:bone_pickaxe"=pickaxe=1
 	
 }
 
