Rebalanced wind generator and satellite solar panels
- Made jetpacks much harder to make
- Re-did higher tier coil recipes
- Rebalanced Gitera Opal mineral veins
- Fixed distance of  T3 asteroids

--- a/.gitignore
+++ b/.gitignore
@@ -25,3 +25,14 @@ options.txt
 usercache.json
 usernamecache.json
 .ReAuth.cfg
+config/tool_progression/blocks.cfg
+config/worldedit/worldedit.properties
+config/tool_progression/blocks.cfg
+config/splash.properties
+config/jei
+config/InvTweaks.cfg
+config/craftpresence.properties
+config/BiomeTweaker/output
+config/AppliedEnergistics2/VersionChecker.cfg
+config/AppliedEnergistics2/items.csv
+config/AppliedEnergistics2/CustomRecipes.cfg
