Re-indexing acronym/saved

--- a/.gitignore
+++ b/.gitignore
@@ -26,7 +26,6 @@ usercache.json
 usernamecache.json
 .ReAuth.cfg
 backups
-config/acronym/saved
 config/biomesoplenty/biomes/defaults
 config/BiomeTweaker/output
 config/brandon3055/ProjectIntelligence
@@ -34,3 +33,6 @@ config/craftpresence.properties
 config/splash.properties
 config/worldedit/worldedit.properties
 config/InvTweaks.cfg
+config/jei
+servers.dat
+encyclopedia-servers
