--- a/config/BiomeTweaker/scripts/netherPlanet.cfg
+++ b/config/BiomeTweaker/scripts/netherPlanet.cfg
@@ -68,6 +68,7 @@ arctic_abyss.addSpawn("logictechcorp.netherex.entity.monster.EntityFrost", "MONS
 arctic_abyss.addSpawn("logictechcorp.netherex.entity.monster.EntityCoolmarSpider", "MONSTER", 35, 1, 4)
 arctic_abyss.addSpawn("logictechcorp.netherex.entity.monster.EntityWight", "MONSTER", 100, 1, 4)
 arctic_abyss.addSpawn("logictechcorp.netherex.entity.monster.EntityBrute", "MONSTER", 15, 1, 1)
+arctic_abyss.addSpawn("cofh.thermalfoundation.entity.monster.EntityBlizz", "MONSTER", 25, 1, 4)
 
 arctic_abyss.registerGenBlockRep("minecraft:stone", "netherex:icy_netherrack")
 arctic_abyss.registerGenBlockRep("minecraft:water", "minecraft:magma")
