--- a/config/abyssalcraft.cfg
+++ b/config/abyssalcraft.cfg
@@ -195,6 +195,10 @@ general {
     # [range: 3 ~ 100, default: 32]
     I:"Corruption Ritual Range"=32
 
+    # The range (in chunks) that will be affected by the Ritual of Purging (on the x and z axis)
+    # [range: 3 ~ 100, default: 32]
+    I:"Curing Ritual Range"=32
+
     # Spawn weight for Dark Offspring. They spawn twice as likely in Darklands Forests and Roofed Forests.
     # [range: 0 ~ 50, default: 5]
     I:"Dark Offspring Spawn Weight"=5
@@ -205,7 +209,7 @@ general {
     #  demonanimal is a Integer representing the Demon Animal to spawn (0 = Demon Pig, 1 = Demon Cow, 2 = Demon Chicken, 3 = Demon Sheep)
     # chance is a decimal number representing the chance (optional, can be left out) of the Demon Animal being spawned (0.2 would mean a 20% chance, defaults to 100% if not set [default: ]
     S:"Demon Animal Transformations" <
-		
+        
      >
 
     # Set to false to prevent Demon Animals (Pigs, Cows, Chickens) from burning in the overworld.
@@ -214,6 +218,9 @@ general {
     # Spawn weight for the Demon Animals (Pigs, Cows, Chickens) spawning in the Nether.
     # [range: 0 ~ 100, default: 15]
     I:"Demon Animal spawn weight"=15
+
+    # Toggles whether or not an Evil Animal spawns a Demon Animal on death.
+    B:"Demon Animals Spawn on Death"=true
 
     # Toggles whether or not Depths Ghouls should use the Biome Dictionary for finding biomes to spawn in (which might lead to them spawning in dimensions from other mods).
     B:"Depths Ghoul Biome Dictionary Spawning"=true
@@ -235,6 +242,9 @@ general {
     # Toggles whether entities that emits particles should do so.
     B:"Entity particles"=true
 
+    # Toggles whether or not Evil Animals only spawn at night during a new moon.
+    B:"Evil Animal New Moon Spawning"=true
+
     # Spawn weight for the Evil Animals (Pigs, Cows, Chickens), keep under 35 to avoid complete annihilation.
     # [range: 0 ~ 100, default: 20]
     I:"Evil Animal spawn weight"=0
@@ -250,7 +260,12 @@ general {
     S:"Interdimensional Cage Blacklist" <
      >
 
-    # Delay in ticks until Knowledge is synced to the client upon changing dimensions. Higher numbers mean you might see item names re-locked for a few seconds when changing dimension, but might reduce load time for the dimension by a little (useful in larger modpacks).\n[range: 20 ~ 400, default: 60]
+    # Tile Entities added to this list will not be usable with the Item Transportation System (eg. you can't move Items from them). Format: modid:name
+    S:"Item Transportation System Blacklist" <
+     >
+
+    # Delay in ticks until Knowledge is synced to the client upon changing dimensions. Higher numbers mean you might see item names re-locked for a few seconds when changing dimension, but might reduce load time for the dimension by a little (useful in larger modpacks).
+    # [range: 20 ~ 400, default: 60]
     I:"Knowledge Sync Delay"=60
 
     # Toggles whether or not Liquid Antimatter will disintegrate any items dropped into a pool of it.
@@ -396,6 +411,9 @@ mod_compat {
 ##########################################################################################################
 
 modules {
+    # Set to false to revert to the old crystal recipes (and them being fuels).
+    B:"Crystal Rework"=true
+
     # Set to false to disable Abyssalcraft Food.
     B:"Enable Foodstuffs"=true
 
@@ -421,6 +439,9 @@ shoggoth {
     # The frequency (in ticks) at which a Lesser Shoggoth can spit acid. Higher values increase the time between each spit attack, while lower values descrease the time (and 0 disables it).
     # [range: 0 ~ 300, default: 100]
     I:"Acid Spit Frequency"=100
+
+    # Toggles whether or not the eyes of Lesser Shoggoths should glow. The glowing can be heavy on performance, so if you're dropping FPS noticeably while looking at Lesser Shoggoths, consider turning this off. Client Side only!
+    B:"Glowing Eyes"=true
 
     # Toggles whether or not Lesser Shoggoths will consume any dropped item they run into.
     B:"Item Consumption"=true
@@ -474,8 +495,14 @@ spells {
     # Set to false to disable the Detachment spell.
     B:Detachment=true
 
+    # Set to false to disable the Display Routes spell.
+    B:"Display Routes"=true
+
     # Set to false to disable the Entropy spell.
     B:Entropy=true
+
+    # Set to false to disable the Floating spell.
+    B:Floating=true
 
     # Set to false to disable the Grasp of Cthulhu spell.
     B:"Grasp of Cthulhu"=true
@@ -500,6 +527,12 @@ spells {
 
     # Set to false to disable the Steal Vigor spell.
     B:"Steal Vigor"=true
+
+    # Set to false to disable the Teleport Home spell.
+    B:"Teleport Home"=true
+
+    # Set to false to disable the Toll The Bell spell.
+    B:"Toll The Bell"=true
 
     # Set to false to disable the Undeath to Dust spell.
     B:"Undeath to Dust"=true
@@ -624,6 +657,10 @@ worldgen {
     # Generation chance of a Shoggoth Lair in swamp biomes. Higher numbers decrease the chance of a Lair generating, while lower numbers increase the chance.
     # [range: 0 ~ 1000, default: 30]
     I:"Shoggoth Lair Generation Chance: Swamps"=30
+
+    # The minimum distance at which two Shoggoth Lairs will generate from each other.
+    # [range: 40 ~ 1000, default: 100]
+    I:"Shoggoth Lair Generation Distance"=100
 
     # Toggles whether or not to generate Shoggoth Lairs (however, they will still generate in Omothol).
     B:"Shoggoth Lairs"=true
