--- a/config/tool_progression/blocks.cfg
+++ b/config/tool_progression/blocks.cfg
@@ -12783,6 +12783,15 @@ block {
     # buildinggadgets:templatemanager:5 [default: pickaxe=0]
     S:"buildinggadgets:templatemanager:5"=pickaxe=0
 
+    # cd4017be_lib:energy_supp:0 [default: pickaxe=0]
+    S:"cd4017be_lib:energy_supp:0"=pickaxe=0
+
+    # cd4017be_lib:fluid_supp:0 [default: pickaxe=0]
+    S:"cd4017be_lib:fluid_supp:0"=pickaxe=0
+
+    # cd4017be_lib:item_supp:0 [default: pickaxe=0]
+    S:"cd4017be_lib:item_supp:0"=pickaxe=0
+
     # chisel:andesite1:0 [default: pickaxe=0]
     S:"chisel:andesite1:0"=pickaxe=0
 
@@ -59121,6 +59130,30 @@ block {
     # theaurorian:aurorianperidotitesmooth:0 [default: pickaxe=0]
     S:"theaurorian:aurorianperidotitesmooth:0"=pickaxe=0
 
+    # theaurorian:aurorianperidotitesmoothstairs:0 [default: pickaxe=0]
+    S:"theaurorian:aurorianperidotitesmoothstairs:0"=pickaxe=0
+
+    # theaurorian:aurorianperidotitesmoothstairs:1 [default: pickaxe=0]
+    S:"theaurorian:aurorianperidotitesmoothstairs:1"=pickaxe=0
+
+    # theaurorian:aurorianperidotitesmoothstairs:2 [default: pickaxe=0]
+    S:"theaurorian:aurorianperidotitesmoothstairs:2"=pickaxe=0
+
+    # theaurorian:aurorianperidotitesmoothstairs:3 [default: pickaxe=0]
+    S:"theaurorian:aurorianperidotitesmoothstairs:3"=pickaxe=0
+
+    # theaurorian:aurorianperidotitesmoothstairs:4 [default: pickaxe=0]
+    S:"theaurorian:aurorianperidotitesmoothstairs:4"=pickaxe=0
+
+    # theaurorian:aurorianperidotitesmoothstairs:5 [default: pickaxe=0]
+    S:"theaurorian:aurorianperidotitesmoothstairs:5"=pickaxe=0
+
+    # theaurorian:aurorianperidotitesmoothstairs:6 [default: pickaxe=0]
+    S:"theaurorian:aurorianperidotitesmoothstairs:6"=pickaxe=0
+
+    # theaurorian:aurorianperidotitesmoothstairs:7 [default: pickaxe=0]
+    S:"theaurorian:aurorianperidotitesmoothstairs:7"=pickaxe=0
+
     # theaurorian:aurorianportal:1 [default: null=-1]
     S:"theaurorian:aurorianportal:1"=null=-1
 
@@ -59129,6 +59162,9 @@ block {
 
     # theaurorian:aurorianportalframebricks:0 [default: pickaxe=0]
     S:"theaurorian:aurorianportalframebricks:0"=pickaxe=0
+
+    # theaurorian:auroriansteelblock:0 [default: pickaxe=0]
+    S:"theaurorian:auroriansteelblock:0"=pickaxe=0
 
     # theaurorian:aurorianstone:0 [default: pickaxe=0]
     S:"theaurorian:aurorianstone:0"=pickaxe=0
@@ -59172,11 +59208,17 @@ block {
     # theaurorian:bossspawnermoonqueen:0 [default: pickaxe=0]
     S:"theaurorian:bossspawnermoonqueen:0"=pickaxe=0
 
+    # theaurorian:bossspawnerspider:0 [default: pickaxe=0]
+    S:"theaurorian:bossspawnerspider:0"=pickaxe=0
+
     # theaurorian:ceruleanblock:0 [default: pickaxe=0]
     S:"theaurorian:ceruleanblock:0"=pickaxe=0
 
     # theaurorian:ceruleanore:0 [default: pickaxe=1]
     S:"theaurorian:ceruleanore:0"=pickaxe=1
+
+    # theaurorian:crystal:0 [default: pickaxe=0]
+    S:"theaurorian:crystal:0"=pickaxe=0
 
     # theaurorian:darkstonebricks:0 [default: pickaxe=0]
     S:"theaurorian:darkstonebricks:0"=pickaxe=0
@@ -59258,6 +59300,18 @@ block {
 
     # theaurorian:moonglasspane:0 [default: null=-1]
     S:"theaurorian:moonglasspane:0"=null=-1
+
+    # theaurorian:moonlightforge:2 [default: pickaxe=2]
+    S:"theaurorian:moonlightforge:2"=pickaxe=2
+
+    # theaurorian:moonlightforge:3 [default: pickaxe=2]
+    S:"theaurorian:moonlightforge:3"=pickaxe=2
+
+    # theaurorian:moonlightforge:4 [default: pickaxe=2]
+    S:"theaurorian:moonlightforge:4"=pickaxe=2
+
+    # theaurorian:moonlightforge:5 [default: pickaxe=2]
+    S:"theaurorian:moonlightforge:5"=pickaxe=2
 
     # theaurorian:moonsand:0 [default: ?shovel=0]
     S:"theaurorian:moonsand:0"=?shovel=0
@@ -59403,6 +59457,18 @@ block {
     # theaurorian:runestonestairs:7 [default: pickaxe=0]
     S:"theaurorian:runestonestairs:7"=pickaxe=0
 
+    # theaurorian:scrapper:2 [default: pickaxe=2]
+    S:"theaurorian:scrapper:2"=pickaxe=2
+
+    # theaurorian:scrapper:3 [default: pickaxe=2]
+    S:"theaurorian:scrapper:3"=pickaxe=2
+
+    # theaurorian:scrapper:4 [default: pickaxe=2]
+    S:"theaurorian:scrapper:4"=pickaxe=2
+
+    # theaurorian:scrapper:5 [default: pickaxe=2]
+    S:"theaurorian:scrapper:5"=pickaxe=2
+
     # theaurorian:silentwoodcraftingtable:0 [default: null=-1]
     S:"theaurorian:silentwoodcraftingtable:0"=null=-1
 
@@ -59507,6 +59573,54 @@ block {
 
     # theaurorian:silkberryplant:0 [default: null=-1]
     S:"theaurorian:silkberryplant:0"=null=-1
+
+    # theaurorian:tamoltenauroriansteel:0 [default: null=-1]
+    S:"theaurorian:tamoltenauroriansteel:0"=null=-1
+
+    # theaurorian:tamoltenauroriansteel:1 [default: null=-1]
+    S:"theaurorian:tamoltenauroriansteel:1"=null=-1
+
+    # theaurorian:tamoltenauroriansteel:10 [default: null=-1]
+    S:"theaurorian:tamoltenauroriansteel:10"=null=-1
+
+    # theaurorian:tamoltenauroriansteel:11 [default: null=-1]
+    S:"theaurorian:tamoltenauroriansteel:11"=null=-1
+
+    # theaurorian:tamoltenauroriansteel:12 [default: null=-1]
+    S:"theaurorian:tamoltenauroriansteel:12"=null=-1
+
+    # theaurorian:tamoltenauroriansteel:13 [default: null=-1]
+    S:"theaurorian:tamoltenauroriansteel:13"=null=-1
+
+    # theaurorian:tamoltenauroriansteel:14 [default: null=-1]
+    S:"theaurorian:tamoltenauroriansteel:14"=null=-1
+
+    # theaurorian:tamoltenauroriansteel:15 [default: null=-1]
+    S:"theaurorian:tamoltenauroriansteel:15"=null=-1
+
+    # theaurorian:tamoltenauroriansteel:2 [default: null=-1]
+    S:"theaurorian:tamoltenauroriansteel:2"=null=-1
+
+    # theaurorian:tamoltenauroriansteel:3 [default: null=-1]
+    S:"theaurorian:tamoltenauroriansteel:3"=null=-1
+
+    # theaurorian:tamoltenauroriansteel:4 [default: null=-1]
+    S:"theaurorian:tamoltenauroriansteel:4"=null=-1
+
+    # theaurorian:tamoltenauroriansteel:5 [default: null=-1]
+    S:"theaurorian:tamoltenauroriansteel:5"=null=-1
+
+    # theaurorian:tamoltenauroriansteel:6 [default: null=-1]
+    S:"theaurorian:tamoltenauroriansteel:6"=null=-1
+
+    # theaurorian:tamoltenauroriansteel:7 [default: null=-1]
+    S:"theaurorian:tamoltenauroriansteel:7"=null=-1
+
+    # theaurorian:tamoltenauroriansteel:8 [default: null=-1]
+    S:"theaurorian:tamoltenauroriansteel:8"=null=-1
+
+    # theaurorian:tamoltenauroriansteel:9 [default: null=-1]
+    S:"theaurorian:tamoltenauroriansteel:9"=null=-1
 
     # theaurorian:tamoltencerulean:0 [default: null=-1]
     S:"theaurorian:tamoltencerulean:0"=null=-1
@@ -59705,6 +59819,30 @@ block {
 
     # theaurorian:weepingwillowplanks:0 [default: null=-1]
     S:"theaurorian:weepingwillowplanks:0"=null=-1
+
+    # theaurorian:weepingwillowplanksstairs:0 [default: pickaxe=0]
+    S:"theaurorian:weepingwillowplanksstairs:0"=pickaxe=0
+
+    # theaurorian:weepingwillowplanksstairs:1 [default: pickaxe=0]
+    S:"theaurorian:weepingwillowplanksstairs:1"=pickaxe=0
+
+    # theaurorian:weepingwillowplanksstairs:2 [default: pickaxe=0]
+    S:"theaurorian:weepingwillowplanksstairs:2"=pickaxe=0
+
+    # theaurorian:weepingwillowplanksstairs:3 [default: pickaxe=0]
+    S:"theaurorian:weepingwillowplanksstairs:3"=pickaxe=0
+
+    # theaurorian:weepingwillowplanksstairs:4 [default: pickaxe=0]
+    S:"theaurorian:weepingwillowplanksstairs:4"=pickaxe=0
+
+    # theaurorian:weepingwillowplanksstairs:5 [default: pickaxe=0]
+    S:"theaurorian:weepingwillowplanksstairs:5"=pickaxe=0
+
+    # theaurorian:weepingwillowplanksstairs:6 [default: pickaxe=0]
+    S:"theaurorian:weepingwillowplanksstairs:6"=pickaxe=0
+
+    # theaurorian:weepingwillowplanksstairs:7 [default: pickaxe=0]
+    S:"theaurorian:weepingwillowplanksstairs:7"=pickaxe=0
 
     # theaurorian:weepingwillowsapling:0 [default: null=-1]
     S:"theaurorian:weepingwillowsapling:0"=null=-1
@@ -63011,6 +63149,12 @@ block {
 
     # thebetweenlands:mud_tower_brazier:1 [default: null=-1]
     S:"thebetweenlands:mud_tower_brazier:1"=null=-1
+
+    # thebetweenlands:nesting_block_bones:0 [default: null=-1]
+    S:"thebetweenlands:nesting_block_bones:0"=null=-1
+
+    # thebetweenlands:nesting_block_sticks:0 [default: null=-1]
+    S:"thebetweenlands:nesting_block_sticks:0"=null=-1
 
     # thebetweenlands:nettle:0 [default: null=-1]
     S:"thebetweenlands:nettle:0"=null=-1
