--- a/config/tool_progression/materials.cfg
+++ b/config/tool_progression/materials.cfg
@@ -21,6 +21,12 @@ material {
     # ardite [default: 4]
     S:ardite=4
 
+    # auroriansteel [default: 4]
+    S:auroriansteel=4
+
+    # aurorianstone [default: 1]
+    S:aurorianstone=1
+
     # awakeneddraconium [default: 6]
     S:awakeneddraconium=6
 
@@ -59,6 +65,9 @@ material {
 
     # certus [default: 1]
     S:certus=1
+
+    # cerulean [default: 2]
+    S:cerulean=2
 
     # chalcedony [default: 4]
     S:chalcedony=4
@@ -240,6 +249,9 @@ material {
     # mithril [default: 4]
     S:mithril=4
 
+    # moonstone [default: 1]
+    S:moonstone=1
+
     # netherex:amedian [default: 4]
     S:"netherex:amedian"=4
 
@@ -330,6 +342,9 @@ material {
     # signalum [default: 3]
     S:signalum=3
 
+    # silentwood [default: 0]
+    S:silentwood=0
+
     # silver [default: 1]
     S:silver=1
 
@@ -359,6 +374,9 @@ material {
 
     # ta_aurorianite [default: 3]
     S:ta_aurorianite=3
+
+    # ta_auroriansteel [default: 3]
+    S:ta_auroriansteel=3
 
     # ta_aurorianstone [default: 1]
     S:ta_aurorianstone=1
