--- a/config/tool_progression/tools.cfg
+++ b/config/tool_progression/tools.cfg
@@ -564,6 +564,15 @@ tool {
     # theaurorian:aurorianitepickaxe [default: pickaxe=3]
     S:"theaurorian:aurorianitepickaxe"=pickaxe=3
 
+    # theaurorian:auroriansteelaxe [default: axe=3]
+    S:"theaurorian:auroriansteelaxe"=axe=3
+
+    # theaurorian:auroriansteelpickaxe [default: pickaxe=3]
+    S:"theaurorian:auroriansteelpickaxe"=pickaxe=3
+
+    # theaurorian:auroriansteelshovel [default: shovel=3]
+    S:"theaurorian:auroriansteelshovel"=shovel=3
+
     # theaurorian:aurorianstoneaxe [default: axe=1]
     S:"theaurorian:aurorianstoneaxe"=axe=1
 
