--- a/config/craftpresence.properties
+++ b/config/craftpresence.properties
@@ -1,8 +1,14 @@
-#Sun Jun 07 18:40:33 EDT 2020
+#CraftPresence - Configuration Settings
+#Current Version -> v1.7.2 (Schema v1)
+#
+#Last synchronized:
+#Mon Oct 26 10:52:02 EDT 2020
+Verbose_Mode=false
 Enable_Commands=true
 Player_Health_Placeholder=Health\: &current&/&max&
 Detect_MultiMC_Instance=true
 Server_Messages=[default;Playing on &motd&]
+Reduced_Background_Tint=true
 Detect_Technic_Pack=false
 World_Data_Placeholder=On &worldname&
 Show_Dimension=true
@@ -21,11 +27,11 @@ Tooltip_Border_Color=0x505000FF
 Enable_Join_Requests=false
 Entity_Target_Messages=[default;Targeting &entity&]
 Player_Outer_Info_Placeholder=As &name&
+Schema_Version=1
 Strip_Translation_Colors=false
 Debug_Mode=false
 Render_Tooltips=true
-Language_ID=en_US
-ModPack_Message=&name&
+Language_ID=en_us
 Entity_Riding_Messages=[default;Riding &entity&]
 Default_Server_MOTD=A Minecraft Server
 Client_ID=713357231118221372
@@ -35,25 +41,30 @@ Refresh_Rate=2
 Entity_Attacking_Messages=[default;Attacking &entity&]
 Loading_Message=Loading...
 Biome_Messages=[default;Playing in &biome&]
-Singleplayer_Game_Message=Playing Singleplayer
+Button_Background_Color=minecraft;textures/gui/widgets.png
 Gui_Messages=[default;In &gui&]
+Singleplayer_Game_Message=Playing Singleplayer
+Modpack_Message=&name&
+Last_MC_Version_ID=340
 Enable_Per-Gui_System=false
+Fallback_Pack_Placeholder=
 Default_Icon=icon
 Detect_Curse_Manifest=true
-Player_Inner_Info_Placeholder=(&health&)
 Config_Gui_Keybind=71
-Show_Game_Status=true
+Player_Inner_Info_Placeholder=(&health&)
 Tooltip_Background_Color=0xF0100010
+Show_Game_Status=true
 Item_Messages=[default;Holding &main&]
 Player_Coordinate_Placeholder=At &xPosition&, &zPosition&
-Main_Menu_Message=In the Main Menu
 Gui_Background_Color=minecraft;textures/gui/options_background.png
+Main_Menu_Message=In the Main Menu
+Player_Items_Placeholder=Items\: &main&
 Default_Dimension_Icon=icon
-Player_List_Placeholder=&current& / &max& Players
 Small_Image_Text_Format=&SERVER& &PACK&
-Enable_Per-Item_System=false
-Vivecraft_Message=Playing in VR via Vivecraft
+Player_List_Placeholder=&current& / &max& Players
 Enable_Per-Entity_System=false
+Vivecraft_Message=Playing in VR via Vivecraft
+Enable_Per-Item_System=false
 Game_State_Message_Format=&SERVER& &PACK&
 Large_Image_Text_Format=&MAINMENU&&DIMENSION&
 Format_Words=true
