--- a/config/theaurorian.cfg
+++ b/config/theaurorian.cfg
@@ -7,11 +7,23 @@
 ##########################################################################################################
 
 blocks {
-    # Changes how much chimneys speed up the Aurorian Furnace when at maximum number (0.5 is + 50%) [range: 0.0 ~ 1.0, default: 0.5]
+    # Changes how much chimneys speed up the Aurorian Furnace when at maximum number (0.5 is + 50%) [range: 0.0 ~ 0.99, default: 0.5]
     S:ChimneySpeedMuliplier=0.5
+
+    # The chance for a Crystal to break when the machine finishes a recipe. (0.5 is 50%, 0 is no breaking) [range: 0.0 ~ 1.0, default: 0.25]
+    S:CrystalsChanceOfBreaking=0.25
+
+    # How much a Crystal will speed up the machine below it (LOWER percentage = FASTER machine, yes I know its backwards) [range: 0.01 ~ 1.0, default: 0.5]
+    S:CrystalsSpeedReduction=0.5
+
+    # Set to false to disable Crystals speeding up machines when placed on top [default: true]
+    B:CrystalsSpeedUpMachines=true
 
     # Maximum number of chimneys able to be stacked on Aurorian Furnace [range: 0 ~ 255, default: 10]
     I:MaximumChimneys=10
+
+    # How many ticks until the scrapper will perform 1 update, Scrapper requires 100 updates to do 1 craft. (Meaning default is 400 ticks(20 seconds) for 1 craft) [range: 0 ~ 72000, default: 4]
+    I:ScrapperTickInterval=4
 }
 
 
@@ -22,6 +34,9 @@ blocks {
 ##########################################################################################################
 
 compatibility {
+    # Set to false to disable Constructs Armory integration [default: true]
+    B:EnableConstructsArmoryCompatibility=true
+
     # Set to false to disable Tinkers Construct integration [default: true]
     B:EnableTinkersConstructCompatibility=true
 }
@@ -34,7 +49,7 @@ compatibility {
 ##########################################################################################################
 
 dimensions {
-    # ID to use for the aurorian dimension [range: -1000 ~ 1000, default: 24]
+    # ID to use for the aurorian dimension [range: -1000 ~ 1000, default: 424]
     I:AurorianDimID=44
 }
 
@@ -46,6 +61,12 @@ dimensions {
 ##########################################################################################################
 
 entity {
+    # Density of mobs spawning in the Darkstone Dungeon, 2 for twice as many mobs, etc [range: 0 ~ 10, default: 1]
+    I:DarkstoneDungeonMobDensity=1
+
+    #  [range: 0.0 ~ 100.0, default: 1.0]
+    S:MoonQueenDamageMuliplier=1.0
+
     #  [range: 0.0 ~ 100.0, default: 1.0]
     S:MoonQueenHealthMuliplier=1.0
 
@@ -56,7 +77,16 @@ entity {
     I:RunestoneDungeonMobDensity=1
 
     #  [range: 0.0 ~ 100.0, default: 1.0]
+    S:RunestoneKeeperDamageMuliplier=1.0
+
+    #  [range: 0.0 ~ 100.0, default: 1.0]
     S:RunestoneKeeperHealthMuliplier=1.0
+
+    #  [range: 0.0 ~ 100.0, default: 1.0]
+    S:SpiderMotherDamageMuliplier=1.0
+
+    #  [range: 0.0 ~ 100.0, default: 1.0]
+    S:SpiderMotherHealthMuliplier=1.0
 }
 
 
@@ -91,6 +121,18 @@ generation {
     # Changes the size of ore vein [range: 0 ~ 50, default: 7]
     I:CeruleanOreSize=7
 
+    # Changes the size of ore vein [range: 0 ~ 50, default: 10]
+    I:DirtCount=10
+
+    # Changes the max height of ore vein [range: 0 ~ 255, default: 256]
+    I:DirtHeightMax=256
+
+    # Changes the min height of ore vein [range: 0 ~ 255, default: 5]
+    I:DirtHeightMin=5
+
+    # Changes the size of ore vein [range: 0 ~ 50, default: 33]
+    I:DirtSize=33
+
     # Set to false to disable Urns that spawn underground [default: true]
     B:GenerateUrns=true
 
@@ -117,6 +159,18 @@ generation {
 
     # Changes the size of ore vein [range: 0 ~ 50, default: 9]
     I:MoonstoneOreSize=9
+
+    # Changes the size of ore vein [range: 0 ~ 50, default: 10]
+    I:PeridotiteCount=10
+
+    # Changes the max height of ore vein [range: 0 ~ 255, default: 80]
+    I:PeridotiteHeightMax=80
+
+    # Changes the min height of ore vein [range: 0 ~ 255, default: 5]
+    I:PeridotiteHeightMin=5
+
+    # Changes the size of ore vein [range: 0 ~ 50, default: 33]
+    I:PeridotiteSize=33
 }
 
 
@@ -127,20 +181,42 @@ generation {
 ##########################################################################################################
 
 misc {
+    # Base Max level for Aurorian Steel items. After used this many times an enchantment will level up, next level cost depends on multiplier [range: 0 ~ 72000, default: 100]
+    I:AurorianSteel_BaseMaxLevel=100
+
+    # Max Level multiplier for Aurorian Steel items, every time they level up the max level is multiplied by this [range: 1.0 ~ 100.0, default: 1.75]
+    S:AurorianSteel_BaseMaxLevelMultiplier=1.75
+
+    # List of enchantments, use is decided by AurorianSteel_Enchants_WhitelistBlacklist, you can also specify mod ids to whitelist or blacklist whole mods, ex: (draconicevolution, minecraft:sharpness) [default: ]
+    S:AurorianSteel_Enchants <
+     >
+
+    # Decides how to treat AurorianSteel_Enchants, 0 - ignored (Aurorian Steel can upgrade any enchantment), 1 - whitelist (can only upgrade enchantments specified), 2 - blacklist (upgrades all but the enchantments specified) [range: 0 ~ 2, default: 0]
+    I:AurorianSteel_Enchants_WhitelistBlacklist=0
+
     # How many total connected log blocks can the Aurorianite Axe chop at once [range: 0 ~ 72000, default: 256]
     I:AurorianiteAxeMaxChopSize=256
 
     # Cooldown in ticks for the swords levitate ability. 600 ticks = 30 seconds [range: 0 ~ 72000, default: 600]
     I:AurorianiteSwordCooldown=600
 
+    # Stack size of Crystals [range: 1 ~ 64, default: 16]
+    I:CrystalStackSize=16
+
     # How much damage per armor piece the lightning enchantment should add (this multiplied by # of worn armor) [range: 0.0 ~ 10.0, default: 0.2]
     S:LightningEnchantmentMulitplier=0.2
 
-    # List of items, use is decided by OrbOfAbsorptionWhitelistBlacklist, you can also specify mod ids to whitelist or blacklist whole mods, ex: (tconstruct, minecraft:elytra) [default: ]
+    # Set to false to disable enchantments from carrying over when crafting tools with the Moonlight Forge [default: true]
+    B:MoonlightForgeTransfersEnchants=true
+
+    # Max durability of the Orb of Absorption. [range: 1 ~ 72000, default: 250]
+    I:OrbOfAbsorptionDurability=250
+
+    # List of items, use is decided by OrbOfAbsorptionWhitelistBlacklist, you can also specify mod ids to whitelist or blacklist whole mods, ex: (tconstruct, minecraft:elytra) [default: [theaurorian:absorptionorb], [theaurorian:strangemeat]]
     S:OrbOfAbsorptionList <
      >
 
-    # Decides how to treat OrbOfAbsorptionList, 0 - ignored (Orb of Absorption can repair any damaged object), 1 - whitelist (can only repair items in the list), 2 - blacklist (repairs everything but items in the list) [range: 0 ~ 2, default: 0]
+    # Decides how to treat OrbOfAbsorptionList, 0 - ignored (Orb of Absorption can repair any damaged object), 1 - whitelist (can only repair items in the list), 2 - blacklist (repairs everything but items in the list) [range: 0 ~ 2, default: 2]
     I:OrbOfAbsorptionWhitelistBlacklist=0
 
     # Can change the item(s) used to light the portal here (Uses item's unlocalized name) [default: [minecraft:flint_and_steel]]
@@ -150,6 +226,9 @@ misc {
 
     # Cooldown in ticks for the Aurorian Slime Boots jump ability [range: 0 ~ 72000, default: 100]
     I:SlimeBootsCooldown=100
+
+    # Percent for one armor piece to cleanse the players negative effects, stacks with other armor parts (full spectral armor with 6% is a 24% chance with full set) [range: 0.01 ~ 1.0, default: 0.06]
+    S:Spectral_Armor_CleanseChance=0.06
 
     # Set to false to disable Silentwood Sticks making Fire or lighting Portal [default: true]
     B:SticksMakeFire=true
@@ -172,6 +251,90 @@ misc {
 
 
 ##########################################################################################################
+# multipliers
+#--------------------------------------------------------------------------------------------------------#
+# Tool and Armor multipliers
+##########################################################################################################
+
+multipliers {
+    # Harvest level for these tools [range: 0 ~ 500, default: 3]
+    I:AurorianSteel_HarvestLevel=3
+
+    # Multiplier for armor strength [range: 0.0 ~ 1000.0, default: 1.0]
+    S:AurorianSteel_Multiplier_Armor=1.0
+
+    # Multiplier for damage [range: 0.0 ~ 1000.0, default: 1.0]
+    S:AurorianSteel_Multiplier_Damage=1.0
+
+    # Multiplier for tool/armor durability [range: 0.0 ~ 1000.0, default: 1.0]
+    S:AurorianSteel_Multiplier_Durability=1.0
+
+    # Multiplier for mining speed [range: 0.0 ~ 1000.0, default: 1.0]
+    S:AurorianSteel_Multiplier_Speed=1.0
+
+    # Harvest level for these tools [range: 0 ~ 500, default: 1]
+    I:AurorianStone_HarvestLevel=1
+
+    # Multiplier for damage [range: 0.0 ~ 1000.0, default: 1.0]
+    S:AurorianStone_Multiplier_Damage=1.0
+
+    # Multiplier for tool/armor durability [range: 0.0 ~ 1000.0, default: 1.0]
+    S:AurorianStone_Multiplier_Durability=1.0
+
+    # Multiplier for mining speed [range: 0.0 ~ 1000.0, default: 1.0]
+    S:AurorianStone_Multiplier_Speed=1.0
+
+    # Multiplier for armor strength [range: 0.0 ~ 1000.0, default: 1.0]
+    S:Cerulean_Multiplier_Armor=1.0
+
+    # Multiplier for tool/armor durability [range: 0.0 ~ 1000.0, default: 1.0]
+    S:Cerulean_Multiplier_Durability=1.0
+
+    # Harvest level for these tools [range: 0 ~ 500, default: 2]
+    I:Moonstone_HarvestLevel=2
+
+    # Multiplier for damage [range: 0.0 ~ 1000.0, default: 1.0]
+    S:Moonstone_Multiplier_Damage=1.0
+
+    # Multiplier for tool/armor durability [range: 0.0 ~ 1000.0, default: 1.0]
+    S:Moonstone_Multiplier_Durability=1.0
+
+    # Multiplier for mining speed [range: 0.0 ~ 1000.0, default: 1.0]
+    S:Moonstone_Multiplier_Speed=1.0
+
+    # Harvest level for these tools [range: 0 ~ 500, default: 0]
+    I:Silentwood_HarvestLevel=0
+
+    # Multiplier for tool/armor durability [range: 0.0 ~ 1000.0, default: 1.0]
+    S:Silentwood_Multiplier_Durability=1.0
+
+    # Multiplier for mining speed [range: 0.0 ~ 1000.0, default: 1.0]
+    S:Silentwood_Multiplier_Speed=1.0
+
+    # Harvest level for these tools [range: 0 ~ 500, default: 3]
+    I:Special_HarvestLevel=3
+
+    # Multiplier for damage [range: 0.0 ~ 1000.0, default: 1.0]
+    S:Special_Multiplier_Damage=1.0
+
+    # Multiplier for tool/armor durability [range: 0.0 ~ 1000.0, default: 1.0]
+    S:Special_Multiplier_Durability=1.0
+
+    # Multiplier for mining speed [range: 0.0 ~ 1000.0, default: 1.0]
+    S:Special_Multiplier_Speed=1.0
+
+    # Multiplier for armor strength [range: 0.0 ~ 1000.0, default: 1.0]
+    S:Spectral_Multiplier_Armor=1.0
+
+    # Multiplier for tool/armor durability [range: 0.0 ~ 1000.0, default: 1.0]
+    S:Spectral_Multiplier_Durability=1.0
+
+    # Multiplier for tea potion effect duration [range: 0.0 ~ 1000.0, default: 1.0]
+    S:Tea_EffectDuration_Muliplier=1.0
+}
+
+
+##########################################################################################################
 # structures
 #--------------------------------------------------------------------------------------------------------#
 # Structure configuration
@@ -181,13 +344,19 @@ structures {
     # How many chunks away until another Runestone Dungeons can generate, also affects Moon Temple generation [range: 16 ~ 256, default: 32]
     I:DungeonDensity=32
 
+    # Set to false to disable Darkstone Dungeons [default: true]
+    B:GenerateDarkstoneDungeon=true
+
+    # Set to false to disable Graveyards [default: true]
+    B:GenerateGraveyards=true
+
     # Set to false to disable Moon Temples [default: true]
     B:GenerateMoonTemple=true
 
     # Set to false to disable Moon Temple's spiral path up [default: true]
     B:GenerateMoonTemplePath=true
 
-    # Set to false to disable Mushroom Caves [default: true]
+    # Set to false to disable Mushroom Caves [default: false]
     B:GenerateMushroomCaves=true
 
     # Set to false to disable ruin structures (like destroyed houses or small underground structures) [default: true]
