--- a/config/craftpresence.properties
+++ b/config/craftpresence.properties
@@ -2,7 +2,7 @@
 #Current Version -> v1.7.2 (Schema v1)
 #
 #Last synchronized:
-#Mon Oct 26 10:52:02 EDT 2020
+#Thu Nov 05 19:26:15 EST 2020
 Verbose_Mode=false
 Enable_Commands=true
 Player_Health_Placeholder=Health\: &current&/&max&
@@ -42,29 +42,29 @@ Entity_Attacking_Messages=[default;Attacking &entity&]
 Loading_Message=Loading...
 Biome_Messages=[default;Playing in &biome&]
 Button_Background_Color=minecraft;textures/gui/widgets.png
-Gui_Messages=[default;In &gui&]
 Singleplayer_Game_Message=Playing Singleplayer
-Modpack_Message=&name&
-Last_MC_Version_ID=340
+Gui_Messages=[default;In &gui&]
 Enable_Per-Gui_System=false
-Fallback_Pack_Placeholder=
+Last_MC_Version_ID=340
+Modpack_Message=&name&
 Default_Icon=icon
+Fallback_Pack_Placeholder=
 Detect_Curse_Manifest=true
-Config_Gui_Keybind=71
 Player_Inner_Info_Placeholder=(&health&)
-Tooltip_Background_Color=0xF0100010
+Config_Gui_Keybind=71
 Show_Game_Status=true
+Tooltip_Background_Color=0xF0100010
 Item_Messages=[default;Holding &main&]
 Player_Coordinate_Placeholder=At &xPosition&, &zPosition&
-Gui_Background_Color=minecraft;textures/gui/options_background.png
 Main_Menu_Message=In the Main Menu
+Gui_Background_Color=minecraft;textures/gui/options_background.png
 Player_Items_Placeholder=Items\: &main&
 Default_Dimension_Icon=icon
-Small_Image_Text_Format=&SERVER& &PACK&
 Player_List_Placeholder=&current& / &max& Players
-Enable_Per-Entity_System=false
-Vivecraft_Message=Playing in VR via Vivecraft
+Small_Image_Text_Format=&SERVER& &PACK&
 Enable_Per-Item_System=false
+Vivecraft_Message=Playing in VR via Vivecraft
+Enable_Per-Entity_System=false
 Game_State_Message_Format=&SERVER& &PACK&
 Large_Image_Text_Format=&MAINMENU&&DIMENSION&
 Format_Words=true
